--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		
-		<!-- Start of Async Callbell Code -->
-		<script>
-			window.callbellSettings = {
-				token: "3keDBAesnntPqKyWwGzAYBSD"
-			};
-		</script>
-		<!-- <script>
-			(function(){var w=window;var ic=w.callbell;if(typeof ic==="function"){ic('reattach_activator');ic('update',callbellSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Callbell=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://dash.callbell.eu/include/'+window.callbellSettings.token+'.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);};if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
-		</script> -->
-		<!-- End of Async Callbell Code -->
+		
 
 
 		<!-- Bootstrap CDN for css -->
@@ -25,7 +16,7 @@
 		/>
 		
 		<!-- custom css -->
-		<link rel="stylesheet" href="./dist/css/style.css" />
+		<link rel="stylesheet" href="./scss/style.css" />
 
 		<title>HandyMan London</title>
 
@@ -1756,9 +1747,9 @@
 		<!-- fontawesome cdn -->
 		<script src="https://kit.fontawesome.com/27ad0ca7fa.js" crossorigin="anonymous"></script>
 		<!-- cookies code -->
-		<script type="text/javascript" id="cookieinfo"
+		<!-- <script type="text/javascript" id="cookieinfo"
         src="//cookieinfoscript.com/js/cookieinfo.min.js">
-    </script>
+    </script> -->
 		<script src="./dist/js/app.js"></script>
 	</body>
 </html>
