--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- custom css -->
 		<link rel="stylesheet" href="./scss/style.css" />
 
-		<title>HandyMan London</title>
+		<title>eMarketing London</title>
 
 				<!-- Favicons
 			================================================== -->
@@ -337,10 +337,14 @@
 				<div class="container-lg">
 					<div class="row  ">
 
-						<div class="col-md-8 offset-md-2">
+						<div class="col-md-10 offset-md-1">
 							<div class="hero-text">
-								<div class="heading">
-									<h1>Book Professional Cleaning And Handyman Services, On-Demand!</h1>
+								<div class="heading display">
+									<h1>Automate Any Internet Marketing Tasks</h1>
+								</div>
+								<div class="sub-heading">
+									<h5>Our internet marketing package are proven to work and built to fit any needs.
+										If you do local marketing, video marketing, SEO – you need our online marketing TOOLS & STRATEGY.</h5>
 								</div>
 								<div class="hero-button">
 									<button type="button" class="btn button"  data-toggle="modal" data-target=".bd-example-modal-lg">Book now <i class="fas fa-long-arrow-alt-right ml-2"></i></button>
