--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<section class="whatsapp-icon">
 				<a href="https://wa.me/447957573632"><i class="fab fa-whatsapp-square fa-3x"></i></a>
 			</section>
-			<nav class="navbar navbar-expand-lg navbar-light" id="menu">
+			<nav class="navbar navbar-expand-lg navbar-dark" id="menu">
 				<a href="#" class="navbar-brand">
 					<img
 						class="img-fluid img-responsive"
