review and footer designed

--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
 									</div>
 									<div class="review-text">
 											
-										<p><i class="fas fa-quote-left fa-3x quote"></i>Just wowww very good service professional helpers. Nice behaviour. Finaly within budget you can get the best service!
+										<p><i class="fas fa-quote-left fa-3x quote"></i>I’m happy to see that they finally decided to release a bundle with their biggest hits! I consider this to be the ultimate starting pack for online-based consultancy businesses.
 										</p>
 										<!-- <blockquote class="blockquote">
 											<p class="mb-0"> <span class="quote">"</span> Just wowww very good service professional helpers. Nice behaviour. Finaly within budget you can get the best service!</p>
@@ -816,7 +816,7 @@
 										<p class="company ">- CEO at Urban Links</p>
 									</div>
 									<div class="review-text">	
-										<p><i class="fas fa-quote-left fa-3x quote"></i> Absolutely professional team of people, always prompt and clear in communication, and most importantly - unlike other electricians/mechanics - their team always showed up in due time and finished their work properly.
+										<p><i class="fas fa-quote-left fa-3x quote"></i> Absolutely professional team of people, always prompt and clear in communication, and most importantly - their team always showed up in due time and finished their work properly.
 										</p>
 									</div>
 								</div>
@@ -835,12 +835,12 @@
 										<i class="fas fa-star"></i>
 									</div>
 									<div class="reviewer-info">
-										<h6 class="name">Martuza Shimul</h6>
-										<p class="company ">- Software Engineer at Digital Ambitions</p>
+										<h6 class="name">Jessica Zelg</h6>
+										<p class="company ">- Hartford, Connecticut</p>
 									</div>
 									<div class="review-text">
 											
-										<p><i class="fas fa-quote-left fa-3x quote"></i>Just wowww very good service professional helpers. Nice behaviour. Finaly within budget you can get the best service!
+										<p><i class="fas fa-quote-left fa-3x quote"></i>Don’t be afraid to invest in this bundle if you are just starting out. I was struggling to generate enough leads to support my work-at-home job… Not anymore!
 										</p>
 										<!-- <blockquote class="blockquote">
 											<p class="mb-0"> <span class="quote">"</span> Just wowww very good service professional helpers. Nice behaviour. Finaly within budget you can get the best service!</p>
@@ -1726,7 +1726,7 @@
 				</section>
 			<section class="footer d-none d-md-block">
 				<div class="container-md">
-					<p class="copy text-center">Copyright © 2020 HandyMan London. All rights reserved.</p>
+					<p class="copy text-center">Copyright © 2020 eMarketing London. All rights reserved.</p>
 					<p class=" text-center"><a href="./privacy-policy.html">Privacy Policy</a></p>
 				</div>
 			</section>
