--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							>
 						</li> -->
 						<li class="nav-item">
-							<a class="nav-link scroll" href="#services">Services</a>
+							<a class="nav-link scroll" href="#features">Features</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link scroll" href="#how-it-works">how it works</a>
@@ -74,9 +74,9 @@
 						<li class="nav-item">
 							<a class="nav-link scroll" href="#contact">support</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link scroll" href="#areas">coverage</a>
-						</li>
+						</li> -->
 						
 						<li class="nav-item">
 							<a
@@ -85,7 +85,7 @@
 								href="#"
 								data-toggle="modal"
 								data-target=".bd-example-modal-lg"
-								>Book now <i class="fas fa-long-arrow-alt-right"></i></a
+								>get started  <i class="fas fa-long-arrow-alt-right"></i></a
 							>
 						</li>
 					</ul>
@@ -442,7 +442,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="sell-more">
+			<section id="how-it-works" class="sell-more scrollspy">
 				<div class="container-sm">
 					<div class="sm-wrapper">
 						<div class="row">
