thank-you designed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<a class="nav-link scroll" href="#process">process</a>
 						</li> -->
             <li class="nav-item">
-              <a class="nav-link scroll" href="#contact">support</a>
+              <a class="nav-link scroll" href="#contact">contact</a>
             </li>
             <!-- <li class="nav-item">
 							<a class="nav-link scroll" href="#areas">coverage</a>
@@ -452,9 +452,9 @@
                     data-toggle="modal"
                     data-target=".bd-example-modal-lg"
                   >
-                    Book now <i class="fas fa-long-arrow-alt-right ml-2"></i>
+                    get started <i class="fas fa-long-arrow-alt-right ml-2"></i>
                   </button>
-                  <a class="btn button button-second ml-5" href="#options"
+                  <a class="btn button button-second ml-5" href="#how-it-works"
                     >how it works</a
                   >
                 </div>
@@ -604,7 +604,14 @@
                     resources, and the know-how to get more clients and sell
                     more
                   </p>
-                  <button class="button">Start Today</button>
+                  <button
+                    type="button"
+                    class="btn button"
+                    data-toggle="modal"
+                    data-target=".bd-example-modal-lg"
+                  >
+                    Start Today
+                  </button>
                 </div>
               </div>
               <div class="col-md-6">
@@ -637,7 +644,14 @@
                     cloud-based softwares that will automate most of your
                     marketing chores, you can focus on scaling your business.
                   </p>
-                  <button class="button button-second">Get Started</button>
+                  <button
+                    type="button"
+                    data-toggle="modal"
+                    data-target=".bd-example-modal-lg"
+                    class="button button-second"
+                  >
+                    Get Started
+                  </button>
                 </div>
               </div>
               <div class="col-md-6">
@@ -666,7 +680,14 @@
                     same: Build the best possible product by questioning
                     assumptions and implementing distruptive solutions.
                   </p>
-                  <button class="button button-second">Get Started</button>
+                  <button
+                    type="button"
+                    data-toggle="modal"
+                    data-target=".bd-example-modal-lg"
+                    class="button button-second"
+                  >
+                    Get Started
+                  </button>
                 </div>
               </div>
               <div class="col-md-8 ">
