--- a/thank-you.html
+++ b/thank-you.html
@@ -67,19 +67,19 @@
 							>
 						</li> -->
             <li class="nav-item">
-              <a class="nav-link scroll" href="#features">Features</a>
+              <a class="nav-link scroll" href="./index.html#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link scroll" href="#how-it-works">how it works</a>
+              <a class="nav-link scroll" href="./index.html#how-it-works">how it works</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link scroll" href="#why-us">why us</a>
+              <a class="nav-link scroll" href="./index.html#why-us">why us</a>
             </li>
             <!-- <li class="nav-item">
 							<a class="nav-link scroll" href="#process">process</a>
 						</li> -->
             <li class="nav-item">
-              <a class="nav-link scroll" href="#contact">contact</a>
+              <a class="nav-link scroll" href="./index.html#contact">contact</a>
             </li>
             <!-- <li class="nav-item">
 							<a class="nav-link scroll" href="#areas">coverage</a>
