cookies code activated

--- a/index.html
+++ b/index.html
@@ -1158,9 +1158,11 @@
       crossorigin="anonymous"
     ></script>
     <!-- cookies code -->
-    <!-- <script type="text/javascript" id="cookieinfo"
-        src="//cookieinfoscript.com/js/cookieinfo.min.js">
-    </script> -->
+    <script
+      type="text/javascript"
+      id="cookieinfo"
+      src="//cookieinfoscript.com/js/cookieinfo.min.js"
+    ></script>
     <script src="./dist/js/app.js"></script>
   </body>
 </html>
